# mta_process_model

./: .env.default  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  conf.yaml  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yaml
params/: data.yaml  logs.yaml  models.yaml
src/data/: __init__.py  process.py  utils.py
src/data/utils/: _depersonalization.py  _parse_xml.py  _prepare_dataset.py  _to_s3.py  base.py  general.py  types.py
src/models/native/: __init__.py  bioBERT_native.py  ruGPT_native.py
src/models/train/: __init__.py  process.py
src/models/train/utils/: _local_train.py  _train.py
